<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="todo@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>abb_data</depend>
  <depend>abb_irb_120_config</depend>
  <depend>abb_irb_120_dual_config</depend>
  <depend>abb_irb_120_resource</depend>
  <depend>abb_irb_4600_config</depend>
  <depend>abb_irb_4600_dual_config</depend>
  <depend>abb_irb_4600_resource</depend>
  <depend>abb_move_group_interface</depend>

  <depend>abb_egm_rws_managers</depend>
  <depend>abb_libegm</depend>
  <depend>abb_librws</depend>
  <depend>abb_resource</depend>
  <depend>abb_bringup</depend>
  <depend>abb_hardware_interface</depend>
  <depend>abb_ros2</depend>
  <depend>abb_rws_client</depend>
  <depend>abb_ros2_msgs</depend>
  <depend>abb_irb4600_support</depend>
  <depend>abb_irb1200_support</depend>
  <depend>abb_irb1200_5_90_moveit_config</depend>

  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ur_client_library</depend>
  <depend>ur_controllers</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_description</depend>
  <depend>ur_msgs</depend>

  <exec_depend>force_torque_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>socat</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>warehouse_ros_sqlite</exec_depend>
  <depend>ur_robot_driver</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
